--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+  }
+  
+
 body {
     margin: 0;
 }
@@ -8,13 +13,26 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
+    margin: 0 0 0.5em;
 }
+
+p {
+    margin: 0 0 0.3em;
+  }
 
 a {
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
 }
+
+
+embed,
+video,
+object {
+  max-width: 100%
+}
+
 
 img {
     height: 100%;
