--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,18 +7,20 @@
 
 @import './basics/base.css';
 @import './basics/helpers.css';
-/* @import './basics/layout.css'; */
+@import './basics/layout.css';
 
 /* Views */
 @import './views/home.css';
 
 /* @import './apps/note/views/note-app.css'; */
 
-/* @import './apps/mail/views/mail-app.css'; */
+@import './apps/mail/views/mail-index.css';
+@import './apps/mail/views/mail-list.css';
 
 /* Cmps */
 
 @import './cmps/user-msg.css';
 @import './cmps/app-header.css';
 
-/* @import './apps/mail/cmps/mail-list.css'; */
+@import './apps/mail/cmps/mail-list.css';
+@import './apps/mail/cmps/mail-preview.css';
