--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,4 +23,5 @@
 @import './cmps/app-header.css';
 
 @import './apps/mail/cmps/mail-list.css';
+@import './apps/mail/cmps/mail-filter.css';
 @import './apps/mail/cmps/mail-preview.css';
