--- a/assets/css/apps/mail/cmps/mail-filter.css
+++ b/assets/css/apps/mail/cmps/mail-filter.css
@@ -7,3 +7,23 @@
 .input-container{
     display:inline-block;
 }
+
+.search-input{
+    background-color: #eaf1fb;
+    height: 2.2rem;
+    border: none;
+    margin: 0.5rem;
+    width: 20rem;
+    border-radius: 5px;
+    padding-left: 15px;
+}
+
+.search-input:focus-visible{
+    outline: none;
+    /* border: 1px solid grey; */
+
+}
+
+.search-input:focus{
+    background-color: white;
+}
