--- a/assets/css/apps/mail/cmps/mail-list.css
+++ b/assets/css/apps/mail/cmps/mail-list.css
@@ -1,3 +1,7 @@
 .mail-table{
     width: 100%;
+    font-family: roboto;
+    font-size: 0.8rem;
+    /* background-color: white;
+    padding: 10px 10px 0 10px; */
 }
