--- a/assets/css/apps/mail/cmps/mail-folder-list.css
+++ b/assets/css/apps/mail/cmps/mail-folder-list.css
@@ -2,6 +2,7 @@
     margin-top: 0;
     padding: 0;
     list-style: none;
+    width: 100%;
 }
 
 
@@ -10,6 +11,7 @@
 font-size: 1.2rem;
 align-self: center;
 cursor: pointer;
+color: rgb(93, 93, 93);
 
 }
 
@@ -20,7 +22,32 @@ cursor: pointer;
     margin-bottom: 0.5rem;
     cursor: pointer;
     font-size: 0.8rem;
+    width: 100%;
+    margin: 0;
+    /* padding-left: 4rem; */
+    padding: 3px 0 3px 4rem;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    color: rgb(52, 52, 52);
 }
+
+
+
+
+
+
+.folder-list-item:hover{
+    background-color: rgb(228, 228, 228);
+    
+}
+
+.folder-list-item.checked{
+    background-color: #d3e3fd;
+    font-weight: bold;
+
+}
+
+
 
 .compose-btn{
     margin-bottom: 0.5rem;
@@ -43,4 +70,10 @@ cursor: pointer;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+@media (max-width: 560px) {
+    .folder-list-item{
+        padding-left: 2rem;
+    }
 }
