--- a/assets/css/apps/mail/cmps/mail-list.css
+++ b/assets/css/apps/mail/cmps/mail-list.css
@@ -4,3 +4,15 @@
     /* background-color: white;
     padding: 10px 10px 0 10px; */
 }
+
+.mail-table-header{
+    background-color: white;
+    padding: 0.4rem;
+    padding-left: 1rem;
+    border-top-left-radius: 1rem;
+    text-align: left;
+}
+
+.read-filter{
+    font-size: 2rem;
+}
