--- a/assets/css/apps/mail/cmps/mail-preview.css
+++ b/assets/css/apps/mail/cmps/mail-preview.css
@@ -4,12 +4,18 @@
     padding: 0.6rem;
     /* font-weight: 700; */
     box-shadow: inset 0 -1px 0 0 rgb(100 121 143 / 12%);
-    background-color: rgb(255, 255, 255);
 }
+
 
 .mail-preview:hover{
     padding: 0.6rem;
     padding-bottom: 0.3rem;
+}
+
+.mail-preview td:first-child{
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .mail-subject.read,
@@ -41,7 +47,7 @@
 
 
 .mail-preview.read {
-    background-color: #f2f6fc;
+    background-color: rgb(255, 255, 255);
     font-weight: 400;
 }
 
@@ -65,4 +71,25 @@
     -webkit-line-clamp: 1;
     line-clamp: 1;
     -webkit-box-orient: vertical;
+    line-height: 1.2rem;
 }
+
+.stared{
+    color: rgb(255, 162, 0);
+    font-weight: 800;
+}
+
+
+
+@media (max-width: 780px) {
+    .mail-content {
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+    }
+    .mail-preview {
+        grid-template-columns: 100px 1fr 50px;
+    }
+    
+}
+
+
