added animation and more features at mail

--- a/assets/css/apps/mail/cmps/mail-filter.css
+++ b/assets/css/apps/mail/cmps/mail-filter.css
@@ -2,6 +2,19 @@
 .mail-filter{
     display: flex;
     justify-content: center;
+    align-items: center;
+    
+}
+
+.filter-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eaf1fb;
+    width: min-content;
+    margin: 0.5rem auto;
+    padding: 0 0.5rem;
+    border-radius: 10px;
 }
 
 .input-container{
