--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -1,5 +1,6 @@
 header {
-    background: #c2e7ff;
+    background-color: #f2f6fc;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 6px 0px, rgb(218, 220, 224) 0px -1px 0px 0px inset
 }
 
 .app-header {
@@ -14,6 +15,13 @@ header {
     align-self: center;
     padding-left: 2rem;
     font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.img-logo{
+    width: 50px;
 }
 
 nav{
@@ -31,7 +39,7 @@ nav a {
 }
 
 nav a:hover{
-    background: #b4d7ef;
+    background: #e2f3ff;
 }
 
 nav a:active {
