--- a/assets/css/apps/mail/views/mail-index.css
+++ b/assets/css/apps/mail/views/mail-index.css
@@ -13,7 +13,28 @@
 .mail-container{
     display: grid;
     grid-template-columns: 200px 1fr;
+    overflow-y: scroll;
+    
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #c6e0ff; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #acd0ff; 
+  }
 
 @media (max-width: 560px) {
     .mail-container{
