--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,8 @@
 @import './cmps/user-msg.css';
 @import './cmps/app-header.css';
 
+/* Mail */
+
 @import './apps/mail/cmps/mail-list.css';
 @import './apps/mail/cmps/mail-folder-list.css';
 @import './apps/mail/cmps/mail-details-header.css';
@@ -39,3 +41,9 @@
 @import './apps/book/cmps/add-book.css';
 @import './apps/book/cmps/book-preview.css';
 @import './apps/book/cmps/book-details.css';
+
+/* Note */
+
+@import './apps/note/cmps/note-preview.css';
+@import './apps/note/cmps/note-list.css';
+@import './apps/note/cmps/note-creator.css';
