--- a/assets/css/apps/note/cmps/note-preview.css
+++ b/assets/css/apps/note/cmps/note-preview.css
@@ -1,46 +1,50 @@
-
 .note-preview {
-    min-width: 250px;
-    position: relative;
-    padding-bottom: 30px;
-    min-height: 100px;
-    max-height: 300px;
-    border-radius: 30px;
-    box-shadow: rgba(0, 0, 0, .35) 0 5px 15px;
-    padding: 15px;
-  }
+  min-width: 320px;
+  position: relative;
+  /* padding-bottom: 30px; */
+  min-height: 100px;
 
-.note-actions-container {
-    position: absolute;
-    bottom: 0;
-  }
+  /* max-height: 300px; */
+  border-radius: 30px;
+  box-shadow: rgba(0, 0, 0, .35) 0 5px 15px;
+  padding: 15px;
+  break-inside: avoid-column;
+  margin: 15px;
+  overflow-wrap: break-word;
+}
 
-.note-actions{
-    margin: 0 auto;
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    gap: 1rem;
+/* .note-actions-container {
+  position: absolute;
+  bottom: 0;
+} */
+
+.note-actions {
+  margin: 0 auto;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  gap: 1rem;
 
 }
 
-.note-img {
-    height: 100%;
-  
-  }
+.icon-btn:hover {
+  transform: scale(1.2);
+}
 
-  .image-container {
-    height: 80%;
-  }
-  
-  .image-container img {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
-  
-  }
-  
-  .pinned{
-    color: rgb(255, 106, 0);
-    font-weight: 800;
-  }
+.note-img {
+  height: 100%;
+
+}
+
+.image-container {
+  height: 80%;
+}
+
+.image-container img {
+  margin: 0 auto;
+}
+
+.pinned {
+  color: rgb(255, 106, 0);
+  font-weight: 800;
+}
