--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -1,12 +1,12 @@
 * {
-    box-sizing: border-box;
-  }
-  
+  box-sizing: border-box;
+}
+
 
 body {
-    margin: 0;
-    height: 100vh;
-    font-family: roboto;
+  margin: 0;
+  height: 100vh;
+  font-family: roboto;
 }
 
 h1,
@@ -15,17 +15,17 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 0.5em;
+  margin: 0 0 0.5em;
 }
 
 p {
-    margin: 0 0 0.3em;
-  }
+  margin: 0 0 0.3em;
+}
 
 a {
-    text-decoration: none;
-    color: inherit;
-    cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
 }
 
 
@@ -37,19 +37,20 @@ object {
 
 
 img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+  /* height: 100%; */
+  max-width: 100%;
+  display: block;
+  /* object-fit: cover; */
 }
 
-#root{
+#root {
   height: 100%;
 }
 
-.app{
+.app {
   height: 100%;
 }
 
-.material-symbols-outlined{
+.material-symbols-outlined {
   cursor: pointer;
 }
