--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,3 +47,5 @@
 @import './apps/note/cmps/note-preview.css';
 @import './apps/note/cmps/note-list.css';
 @import './apps/note/cmps/note-creator.css';
+@import './apps/note/cmps/note-vid.css';
+@import './apps/note/cmps/note-fillter.css';
