--- a/assets/css/apps/book/cmps/book-details.css
+++ b/assets/css/apps/book/cmps/book-details.css
@@ -72,6 +72,7 @@
     justify-content: space-around;
     align-items: flex-start;
     gap: 20px;
+    margin-bottom: 30px;
 }
 
 .book-details h5 {
@@ -81,6 +82,13 @@
     max-width: 200px;
     display: block;
     /* margin: auto; */
+}
+
+.book-info-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 
