--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -7,6 +7,7 @@ header {
 .app-header {
     display: flex;
     justify-content: space-between;
+    padding: 0 1rem;
 }
 
 .app-header .app-header-logo{
@@ -52,6 +53,7 @@ header {
     gap: 1rem;
     box-shadow: rgba(0, 0, 0, 0.14) 0px 8px 10px 1px, rgba(0, 0, 0, 0.12) 0px 3px 14px 2px, rgba(0, 0, 0, 0.2) 0px 5px 5px -3px;
     border-radius: 5px;
+    z-index: 1;
 }
 
 .header-modal img{
