--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -12,7 +12,8 @@ header {
 
 .app-header .app-header-logo{
     
-    font-family: heading-now;
+    font-family: Dream-bd;
+
     font-size: 2.3rem;
     margin: 0;
     align-self: center;
