--- a/assets/css/apps/note/cmps/note-fillter.css
+++ b/assets/css/apps/note/cmps/note-fillter.css
@@ -10,39 +10,36 @@
 
 .fillterBtn {
   Padding: 5px;
-  Border: solid lightblue 2px;
+  Border: rgb(3, 199, 253) 1px solid;
   Border-radius: 4px;
-  Background: transparent;
+  background-color: lightblue;
   margin-left: 7px;
 
 }
 
 .fillterBtn:hover {
-  background-color: rgb(212, 227, 231);
+  transform: scale(1.1);
   cursor: pointer;
 }
 
 select {
   margin-left: 7px;
-  /* width: 100%; */
   padding: 5px;
-  border: 1px;
+  border: rgb(3, 199, 253) 1px solid;
   border-radius: 4px;
-  background-color: rgb(212, 227, 231);
 }
 
 select:hover {
   cursor: pointer;
 }
 
-/* input[type=text] {
+.input-filter {
   border-radius: 4px;
-  border: rgb(187, 228, 239) 1px solid;
+  border: rgb(3, 199, 253) 1px solid;
   padding: 5px;
 }
 
-input[type=text]::placeholder {
+.input-filter::placeholder {
   font-weight: bold;
   opacity: 0.5;
-  color: rgb(33, 197, 243);
-} */
+}
