--- a/assets/css/apps/note/cmps/note-preview.css
+++ b/assets/css/apps/note/cmps/note-preview.css
@@ -1,10 +1,8 @@
 .note-preview {
   min-width: 320px;
   position: relative;
-  /* padding-bottom: 30px; */
   min-height: 100px;
-
-  /* max-height: 300px; */
+  text-align: center;
   border-radius: 30px;
   box-shadow: rgba(0, 0, 0, .35) 0 5px 15px;
   padding: 15px;
