--- a/assets/css/apps/book/cmps/book-list.css
+++ b/assets/css/apps/book/cmps/book-list.css
@@ -21,6 +21,10 @@
 .add-book-container img{
     object-fit: contain;
     cursor: pointer;
-    padding: 20px 0;
-    /* min-height: 240px; */
+    padding: 10px;
+}
+
+.add-book-container img:hover {
+    padding: 0;
+    transition-duration: 400ms;
 }
