--- a/assets/css/apps/mail/cmps/mail-list.css
+++ b/assets/css/apps/mail/cmps/mail-list.css
@@ -1,6 +1,18 @@
 .mail-table{
     width: 100%;
     font-size: 0.8rem;
+    padding-right: 2rem;
     
 }
 
+
+@media (max-width: 780px) {
+    .mail-table{
+        padding-right: 0.5rem;
+        
+    }
+
+
+ 
+    
+}
