--- a/assets/css/apps/mail/cmps/mail-table-header.css
+++ b/assets/css/apps/mail/cmps/mail-table-header.css
@@ -4,6 +4,7 @@
     padding: 0.4rem;
     padding-left: 1rem;
     border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
    text-align: left;
 }
 
