--- a/assets/css/apps/note/cmps/note-creator.css
+++ b/assets/css/apps/note/cmps/note-creator.css
@@ -1,10 +1,19 @@
 .note-creator-container {
     display: flex;
-    padding: 1rem 2rem;
+    padding: 0.7rem 2rem;
     gap: 10px;
     box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
     border-radius: 1.5rem;
     margin-bottom: 3rem;
+}
+
+.options-container{
+    display: flex;
+    align-items: baseline;
+}
+
+.options-container label{
+    padding-top: 2px;
 }
 
 .create-form {
@@ -23,11 +32,11 @@
 .create-note-btn {
     background-color: white;
     border: none;
-    padding: 2px;
+    padding: 2px 2px 0 2px;
 }
 
 .create-note-btn:hover {
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(240, 240, 240);
     border-radius: 50%;
 }
 
