--- a/assets/css/cmps/app-header.css
+++ b/assets/css/cmps/app-header.css
@@ -2,6 +2,9 @@ header {
     background-color: #f2f6fc;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 6px 0px, rgb(218, 220, 224) 0px -1px 0px 0px inset;
     color: rgb(40, 40, 40);
+    position: sticky;
+    top: 0;
+    z-index: 5;
 }
 
 .app-header {
