--- a/assets/css/apps/note/cmps/note-creator.css
+++ b/assets/css/apps/note/cmps/note-creator.css
@@ -1,10 +1,11 @@
 .note-creator-container {
     display: flex;
-    padding: 0.7rem 2rem;
+    padding: 0.7rem 1rem;
     gap: 10px;
     box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
     border-radius: 1.5rem;
-    margin-bottom: 3rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .options-container{
