--- a/assets/css/apps/note/cmps/note-fillter.css
+++ b/assets/css/apps/note/cmps/note-fillter.css
@@ -2,19 +2,21 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  align-items: center;
+  gap: 12px;
   padding: 10px;
+}
+
+.text-filter-form {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 
 .fillterBtn {
-  Padding: 5px;
-  Border: rgb(3, 199, 253) 1px solid;
-  Border-radius: 4px;
-  background-color: lightblue;
-  margin-left: 7px;
-
+  Border: none;
+  background-color: inherit;
 }
 
 .fillterBtn:hover {
@@ -25,7 +27,7 @@
 select {
   margin-left: 7px;
   padding: 5px;
-  border: rgb(3, 199, 253) 1px solid;
+  border: lightgrey 1px solid;
   border-radius: 4px;
 }
 
@@ -34,12 +36,17 @@ select:hover {
 }
 
 .input-filter {
-  border-radius: 4px;
-  border: rgb(3, 199, 253) 1px solid;
+  border: none;
+  border-bottom: lightgray 1px solid;
   padding: 5px;
+  width: 220px;
+}
+
+.input-filter:focus-visible {
+  outline: none;
 }
 
 .input-filter::placeholder {
-  font-weight: bold;
+  /* font-weight: bold; */
   opacity: 0.5;
 }
