--- a/assets/css/apps/note/cmps/note-preview.css
+++ b/assets/css/apps/note/cmps/note-preview.css
@@ -7,7 +7,7 @@
   box-shadow: rgba(0, 0, 0, .35) 0 5px 15px;
   padding: 15px;
   break-inside: avoid-column;
-  margin: 15px;
+  margin: 0 15px 15px 15px;
   overflow-wrap: break-word;
 }
 
